2012-01-27 Lorenzo Natale <lorenzo.natale@iit.it>
        * tagging 1.1.9

2011-12-13 Lorenzo Natale <lorenzo.natale@iit.it>
        * tagging 1.1.8

2011-09-13 Lorenzo Natale <lorenzo.natale@iit.it>
    
	* src/tools/iCubGui/src/qavimator.cpp
	* src/tools/iCubGui/src/ui_mainapplicationform.h
	
	added width and hight options to control the size of the window


2011-10-28 Alessandro Scalzo <alessandro.scalzo@iit.it>
    Added dragonfly2raw driver (raw image framegrabber support).
    * main/src/libraries/icubmod/dragonfly2/common/*.*
	* main/src/libraries/icubmod/dragonfly2/linux/*.*
	* main/src/libraries/icubmod/dragonfly2/winnt/*.*

2011-10-07 Alessandro Scalzo <alessandro.scalzo@iit.it>
	Added icons and colors in iCubInterfaceGui.
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/GuiRawData.cpp
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/GuiRawData.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/iCubBoardGui.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/iCubInterfaceGuiClient.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/iCubNetworkGui.h
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiClient/mainClient.cpp
        Added:
        * app/iCubInterfaceGui

2011-10-05 Alessandro Scalzo <alessandro.scalzo@iit.it>
    	Added error messages.
        * main/src/libraries/icubmod/dragonfly2/linux/FirewireCameraDC1394-DR2_2.cpp

2011-10-03 Ugo Pattacini <ugo.pattacini@iit.it>
        * main/src/modules/iKinHead moved under contrib/src/misc
          since it is superseded by Gaze Interface
        * main/src/modules/iKinArmCtrlIF moved under main/src/examples/cartesianInterfaceExample
          since it is only an example of using cartesian IF.

2011-09-29 Alessandro Scalzo <alessandro.scalzo@iit.it>
    * removed iCubInterfaceGui test program from repository
        * main/src/tools/iCubInterfaceGui/iCubInterfaceGuiServer/CMakeLists.txt